<resources>
    <string name="app_name">Spacelaunch X</string>

    <string name="error_retry">There was an error. Retry?</string>

    <string name="company_info_title">Company Information</string>
    <string name="company_info">%1$s was founded by %2$s in %3$d. It has now %4$d employees, %5$d launch sites, and is valued at USD %6$d</string>

    <string name="launches_title">Launches</string>

    <string name="rocket_info">Rocket name / type: %1$s / %2$s</string>
    <string name="launch_date">Launched on %1$s at %2$s</string>

    <string name="days_from_launch">Days from now: %1$d</string>
    <string name="days_since_launch">Days since now: %1$d</string>

    <string name="successfully">successfully</string>
    <string name="unsuccessfully">unsuccessfully</string>

    <string name="check_links">Check some interesting links</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="article">Space Article</string>
    <string name="video">Youtube Video</string>

    <string name="launch_success">Launch success</string>
    <string name="launch_year">Launch year</string>
    <string name="order">Order</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
</resources>
