<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_launch_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <ImageView
                android:id="@+id/iv_patch_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mission_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_patch_image"
                app:layout_constraintTop_toTopOf="@id/iv_patch_image" />

            <TextView
                android:id="@+id/tv_launch_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_mission_name"
                app:layout_constraintTop_toBottomOf="@id/tv_mission_name" />

            <TextView
                android:id="@+id/tv_rocket_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_mission_name"
                app:layout_constraintTop_toBottomOf="@id/tv_launch_date" />

            <TextView
                android:id="@+id/tv_days_from_launch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_mission_name"
                app:layout_constraintTop_toBottomOf="@id/tv_rocket_info" />

            <TextView
                android:id="@+id/tv_launch_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_mission_name"
                app:layout_constraintBottom_toBottomOf="@id/iv_patch_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>